<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_movie_poster_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster_content_description" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:fadingEdge="vertical"
            android:fadingEdgeLength="16dp"
            android:requiresFadingEdge="vertical">

            <LinearLayout
                android:id="@+id/movie_details_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp">

                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    tools:text="Blah Blah The Movie"
                    android:fontFamily="sans-serif-thin"/>

                <TextView
                    android:id="@+id/synposis_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsis_label"
                    android:textSize="16sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:id="@+id/synopsis_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="A movie about nothing"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/release_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/release_date_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="04/04/2019" />

                <TextView
                    android:id="@+id/user_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/vote_average_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8.0" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textSize="24sp"
                android:fontFamily="sans-serif-thin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trailer_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textSize="24sp"
                android:fontFamily="sans-serif-thin" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_review_list" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>